stylesheets working (possibly not in the correct way)

--- a/_layouts/gsdm.html
+++ b/_layouts/gsdm.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 9]><html class="lte-ie8 " lang="en"><![endif]--><!--[if gt IE 8]><!--><html lang="en" class="">
 <!--<![endif]--><head>
 {% include _head.html %}
-    <link rel="stylesheet" href="/gsdm/css/styles.css" />
+    <link rel="stylesheet" href="/assets/stylesheets/gsdm.css" />
   </head>
 
 
