--- a/_layouts/gsdm.html
+++ b/_layouts/gsdm.html
@@ -2,9 +2,8 @@
 <!--[if lt IE 9]><html class="lte-ie8 " lang="en"><![endif]--><!--[if gt IE 8]><!--><html lang="en" class="">
 <!--<![endif]--><head>
 {% include _head.html %}
-    <link rel="stylesheet" href="/gsdm/css/styles.css" />
+    <link rel="stylesheet" href="/assets/stylesheets/styles.css" />
   </head>
-
 
   <body class="mainstream full-width">
     <script type="text/javascript">document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script><a href="#content" class="visuallyhidden">Skip to main content</a>
@@ -17,11 +16,11 @@
 
         <div class="js-toggle-nav" id="global-nav">
           <div class="inner">
-            <span class="home"><a href="/gsdm">Government Service Design Manual</a></span>
+            <span class="home"><a href="/">Government Service Design Manual</a></span>
             <nav role="navigation" class="content">
               <ul id="navigation">
-                <li><a href="/gsdm/digitalbydefault" {% if page.section == 'dbd' %}class="current"{% endif %}>Digital by Default</a></li>
-                <li><a href="/gsdm/guides-and-toolkits" {% if page.section == 'guidance' %}class="current"{% endif %}>Guides &amp; toolkits</a></li>
+                <li><a href="/digitalbydefault" {% if page.section == 'dbd' %}class="current"{% endif %}>Digital by Default</a></li>
+                <li><a href="/guides-and-toolkits" {% if page.section == 'guidance' %}class="current"{% endif %}>Guides &amp; toolkits</a></li>
               </ul>
             </nav>
           </div>
