Lumping nav items back together for now

--- a/_layouts/gsdm.html
+++ b/_layouts/gsdm.html
@@ -16,10 +16,10 @@
 
         <div class="js-toggle-nav" id="global-nav">
           <div class="inner">
-            <span class="home"><a href="/">Government Service Design Manual</a></span>
             <nav role="navigation" class="content">
               <ul id="navigation">
-                <li><a href="/digitalbydefault" {% if page.section == 'dbd' %}class="current"{% endif %}>Digital by Default</a></li>
+                <li><a href="/">Government Service Design Manual</a></li>
+                <li><a href="/digitalbydefault" {% if page.section == 'dbd' %}class="current"{% endif %}>Digital by Default standard</a></li>
                 <li><a href="/guides-and-toolkits" {% if page.section == 'guidance' %}class="current"{% endif %}>Guides &amp; toolkits</a></li>
               </ul>
             </nav>
