--- a/_layouts/gsdm-design-patterns.html
+++ b/_layouts/gsdm-design-patterns.html
@@ -17,11 +17,11 @@
 
         <div class="js-toggle-nav" id="global-nav">
           <div class="inner">
-            <span class="home"><a href="/">Government Service Design Manual</a></span>
             <nav role="navigation" class="content">
               <ul id="navigation">
-                <li><a href="http://gsdm.herokuapp.com/standard/" {% if page.section == 'dbd' %}class="current"{% endif %}>Digital by Default</a></li>
-                <li><a href="http://gsdm.herokuapp.com/handbook/" {% if page.section == 'guidance' %}class="current"{% endif %}>Guides &amp; toolkits</a></li>
+                <li><a href="/">Government Service Design Manual</a></li>
+                <li><a href="/digitalbydefault" {% if page.section == 'dbd' %}class="current"{% endif %}>Digital by Default standard</a></li>
+                <li><a href="/guides-and-toolkits" {% if page.section == 'guidance' %}class="current"{% endif %}>Guides &amp; toolkits</a></li>
               </ul>
             </nav>
           </div>
