--- a/_layouts/gsdm-design-patterns.html
+++ b/_layouts/gsdm-design-patterns.html
@@ -19,9 +19,8 @@
           <div class="inner">
             <nav role="navigation" class="content">
               <ul id="navigation">
-                <li><a href="/">Government Service Design Manual</a></li>
-                <li><a href="/digitalbydefault" {% if page.section == 'dbd' %}class="current"{% endif %}>Digital by Default standard</a></li>
-                <li><a href="/guides-and-toolkits" {% if page.section == 'guidance' %}class="current"{% endif %}>Guides &amp; toolkits</a></li>
+                <li><a href="/guides-and-toolkits" {% if page.section == 'guidance' %}class="current"{% endif %}>Government Service Design Manual</a></li>
+                <li><a href="/digital-by-default" {% if page.section == 'dbd' %}class="current"{% endif %}>Digital by Default standard</a></li>
               </ul>
             </nav>
           </div>
