added basic feedback page

--- a/_layouts/gsdm.html
+++ b/_layouts/gsdm.html
@@ -19,7 +19,7 @@
             <span class="home"><a href="/">Government Service Design Manual</a></span>
             <nav role="navigation" class="content">
               <ul id="navigation">
-                <li><a href="/digitalbydefault" {% if page.section == 'dbd' %}class="current"{% endif %}>Digital by Default</a></li>
+                <li><a href="/digital-by-default/standard.html" {% if page.section == 'dbd' %}class="current"{% endif %}>Digital by Default Standard</a></li>
                 <li><a href="/guides-and-toolkits" {% if page.section == 'guidance' %}class="current"{% endif %}>Guides &amp; toolkits</a></li>
               </ul>
             </nav>
@@ -53,6 +53,9 @@
             </div>
             </article>
           </div>
+		  <div>
+		  	<a href="/guides-and-toolkits/feedback.html">How to give feedback on the manual</a>
+		  </div>
       </section>
     </div><!--end wrapper-->
     {% include _footer.html %}
