--- a/_layouts/phases.html
+++ b/_layouts/phases.html
@@ -33,11 +33,11 @@
               <li>
                 <a href="/gsdm/guides-and-toolkits">Guides and toolkits</a>
               </li>
-              <li>
+              <!--li>
                 <span class="divider">/</span>
                 <a href="/gsdm/guides-and-toolkits/design-patterns">Design patterns</a>
               </li>
-            </div>
+            </div-->
         {% endif %}
 
         <hgroup><h1>{{ page.title }}</h1></hgroup></header><div class="article-container group">
