--- a/_layouts/phases.html
+++ b/_layouts/phases.html
@@ -10,7 +10,7 @@
 
     {% include _header.html %}
 
-    <div id="wrapper" class="{{ page.categories }}{% if page.section_class  %} {{ page.section_class }}{% endif %}">
+    <div id="wrapper" class="{{ page.class }}{{ page.categories }}{% if page.section_class  %} {{ page.section_class }}{% endif %}">
 
       <section id="content" role="main" class="group">
 
@@ -26,19 +26,7 @@
         </div>
 
  
-        <header class="page-header group">
-
-        {% if page.subsection == "Design patterns" %}  
-            <div class="breadcrumb">
-              <li>
-                <a href="/gsdm/guides-and-toolkits">Guides and toolkits</a>
-              </li>
-              <!--li>
-                <span class="divider">/</span>
-                <a href="/gsdm/guides-and-toolkits/design-patterns">Design patterns</a>
-              </li>
-            </div-->
-        {% endif %}
+  
 
         <hgroup><h1>{{ page.title }}</h1></hgroup></header><div class="article-container group">
         <article role="article" class="group">
