Add new diagram to home page and bump new phases slider onto phases landing page

--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -224,6 +224,10 @@ article .inner{
 
 
 
+.phase-diagram{
+  width: 100%;
+}
+
 // ====================================================
 // PROJECTS
 //
