Update css links on design patterns

--- a/_includes/stylesheets/design-patterns/_accordion-form.scss
+++ b/_includes/stylesheets/design-patterns/_accordion-form.scss
@@ -35,6 +35,7 @@
         // Actions
         .accordion-actions{
           list-style-image: none;
+          list-style-type: none;
           padding: 0.6em 1em 0.4em 1em;
           margin: 1em -2em 0 -2em;
           background-color: #f9f9f9;
