Update homepage with hero slots

--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -226,6 +226,7 @@ article .inner{
 
 .phase-diagram{
   width: 100%;
+  margin: 0 -1em 0 -1em;
 }
 
 // ====================================================
@@ -588,7 +589,7 @@ article dd{
   border-bottom: 1px solid #BFC1C3;
   padding-bottom: 5px;
   h3{
-    font-size: 32px;
+    //font-size: 32px;
     margin-top: 1.4em;
   }
   ul{
