commented out annotater

--- a/_layouts/gsdm.html
+++ b/_layouts/gsdm.html
@@ -72,10 +72,10 @@
     </div><!--end wrapper-->
     {% include _footer.html %}
     <script type="text/javascript">
-      jQuery(function ($) {
-        $('.inner').annotator()
-                   .annotator('setupPlugins');
-      });
+      // jQuery(function ($) {
+      //   $('.inner').annotator()
+      //              .annotator('setupPlugins');
+      // });
     </script>
   </body>
 </html>
