--- a/_layouts/gsdm.html
+++ b/_layouts/gsdm.html
@@ -3,8 +3,8 @@
 <!--<![endif]--><head>
 {% include _head.html %}
     <link rel="stylesheet" href="/assets/stylesheets/styles.css" />
-    <!--<script src="http://assets.annotateit.org/annotator/v1.2.5/annotator-full.min.js"></script>
-    <link rel="stylesheet" href="http://assets.annotateit.org/annotator/v1.2.5/annotator.min.css">-->
+<script src="http://assets.annotateit.org/annotator/v1.2.5/annotator-full.min.js"></script>
+    <link rel="stylesheet" href="http://assets.annotateit.org/annotator/v1.2.5/annotator.min.css">
   </head>
 
   <body class="mainstream full-width {{ page.section }}">
@@ -60,10 +60,10 @@
     </div><!--end wrapper-->
     {% include _footer.html %}
     <script type="text/javascript">
-      // jQuery(function ($) {
-      //   $('.inner').annotator()
-      //              .annotator('setupPlugins');
-      // });
+      jQuery(function ($) {
+        $('.inner').annotator()
+                   .annotator('setupPlugins');
+      });
     </script>
   </body>
 </html>
