--- a/_includes/_head.local.html
+++ b/_includes/_head.local.html
@@ -1,24 +1,23 @@
-<!--[if gt IE 8]><!--><link href="/static/application.css" media="screen" rel="stylesheet" type="text/css">
-<!--<![endif]--><!--[if IE 6]><link href="/static/application-ie6.css" media="screen" rel="stylesheet" type="text/css" /><![endif]--><!--[if IE 7]><link href="/static/application-ie7.css" media="screen" rel="stylesheet" type="text/css" /><![endif]--><!--[if IE 8]><link href="/static/application-ie8.css" media="screen" rel="stylesheet" type="text/css" /><![endif]--><link href="/static/core-print.css" media="print" rel="stylesheet" type="text/css">
+<!--[if gt IE 8]><!--><link href="/assets/local/application.css" media="screen" rel="stylesheet" type="text/css">
+<!--<![endif]--><!--[if IE 6]><link href="/assets/local/application-ie6.css" media="screen" rel="stylesheet" type="text/css" /><![endif]--><!--[if IE 7]><link href="/assets/local/application-ie7.css" media="screen" rel="stylesheet" type="text/css" /><![endif]--><!--[if IE 8]><link href="/assets/local/application-ie8.css" media="screen" rel="stylesheet" type="text/css" /><![endif]--><link href="/assets/local/core-print.css" media="print" rel="stylesheet" type="text/css">
 <!--[if IE 8]>
 <script type="text/javascript">
   (function(){if(window.opera){return;}
   setTimeout(function(){var a=document,g,b={families:(g=
-  ["nta"]),urls:["/static/fonts-ie8.css"]},
-  c="/static/libs/goog/webfont-debug.js",d="script",
+  ["nta"]),urls:["/assets/local/fonts-ie8.css"]},
+  c="/assets/local/libs/goog/webfont-debug.js",d="script",
   e=a.createElement(d),f=a.getElementsByTagName(d)[0],h=g.length;WebFontConfig
   ={custom:b},e.src=c,f.parentNode.insertBefore(e,f);for(;h--;a.documentElement
   .className+=' wf-'+g[h].replace(/\s/g,'').toLowerCase()+'-n4-loading');},0)
   })()
 </script>
-<![endif]--><!--[if gte IE 9]><!--><link href="/static/fonts.css" media="all" rel="stylesheet" type="text/css">
-<!--<![endif]--><script src="/static/libs/jquery/jquery-1.7.2.js" type="text/javascript"></script><script defer src="/static/application.js" type="text/javascript"></script><!--[if lt IE 9]>
-      <script src="/static/ie.js" type="text/javascript"></script>
-    <![endif]--><link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
-<!-- For third-generation iPad with high-resolution Retina display: --><link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/apple-touch-icon.png">
-<!-- For iPhone with high-resolution Retina display: --><link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/apple-touch-icon.png">
-<!-- For first- and second-generation iPad: --><link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/apple-touch-icon-72x72.png">
-<!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: --><link rel="apple-touch-icon-precomposed" href="/static/apple-touch-icon-57x57.png">
+<![endif]--><!--[if gte IE 9]><!--><link href="/assets/local/fonts.css" media="all" rel="stylesheet" type="text/css">
+<!--<![endif]--><script src="/assets/local/jquery-1.7.2.js" type="text/javascript"></script><script defer src="/assets/local/application.js" type="text/javascript"></script><!--[if lt IE 9]>
+      <script src="/assets/local/ie.js" type="text/javascript"></script>
+    <![endif]--><link rel="shortcut icon" href="/assets/local/favicon.ico" type="image/x-icon">
+<!-- For third-generation iPad with high-resolution Retina display: --><link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/local/apple-touch-icon.png">
+<!-- For iPhone with high-resolution Retina display: --><link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/local/apple-touch-icon.png">
+<!-- For first- and second-generation iPad: --><link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/local/apple-touch-icon-72x72.png">
+<!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: --><link rel="apple-touch-icon-precomposed" href="/assets/local/apple-touch-icon-57x57.png">
 
-<script src="/frontend/frontend.js" type="text/javascript"></script>
-<script defer src="/frontend/homepage.js" type="text/javascript"></script><link rel="canonical" href="/">
+<script src="/assets/local/frontend.js" type="text/javascript"></script>
