--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -1,6 +1,6 @@
     <!--start header-->
     <header role="banner" class="group" id="global-header"><div class="header-wrapper group">
-        <a href="/" title="Go to the gov.uk homepage" id="logo"><img src="http://static.preview.alphagov.co.uk/static/gov.uk_logotype-2x.png" alt="GOV.UK Logo"></a>
+        <a href="/" title="Go to the gov.uk homepage" id="logo"><img src="{% if page.assets == 'local' %}/assets/local/{% else %}http://static.preview.alphagov.co.uk/static/{% endif %}gov.uk_logotype-2x.png" alt="GOV.UK Logo"></a>
 
         <a href="#footer" class="visuallyhidden">Skip to footer navigation</a>
 
