--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 
-<div class="topic">
+<div class="link-list">
   <h3>{{ page.title }}</h3>
   <ul>
 {% for post in site.categories[page.category] %}
