Create page for printing cards for card sort etc.

--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -184,6 +184,12 @@ article table{
   }
 }
 
+.figure:after{
+    img{
+        content: attr(alt);  
+    }
+}
+
 // ====================================================
 // HOME PAGE
 //
