--- a/_layouts/category-index.html
+++ b/_layouts/category-index.html
@@ -1,5 +1,6 @@
 ---
 layout: default-wrapper
+section_class: category-index
 ---
 
 {% if page.status %}
@@ -9,16 +10,15 @@ layout: default-wrapper
 <article role="article" class="group">
   <header class="page-header group">
     <hgroup>
-      <h1>{{ page.title }}</h1>
+      <h1{% if page.long-title %} class="long-title"{% endif %}>{{ page.title }}</h1>
+      {% if page.subtitle %}
+      <h2 class="subtitle">{{ page.subtitle }}</h2>
+      {% endif %}
     </hgroup>
   </header>
 
   <div class="article-container group">
     <div class="inner">
-      {% if page.subtitle %}
-      <h2 class="subtitle">{{ page.subtitle }}</h2>
-      {% endif %}
-
       {{ content }}
     </div>
 
