--- a/_includes/_head.local.html
+++ b/_includes/_head.local.html
@@ -1,8 +1,23 @@
-<!--[if gt IE 8]><!--><link href="/assets/local/application.css" media="screen" rel="stylesheet" type="text/css"><!--<![endif]-->
-<!--[if IE 6]><link href="/assets/local/application-ie6.css" media="screen" rel="stylesheet" type="text/css" /><![endif]-->
-<!--[if IE 7]><link href="/assets/local/application-ie7.css" media="screen" rel="stylesheet" type="text/css" /><![endif]-->
-<!--[if IE 8]><link href="/assets/local/application-ie8.css" media="screen" rel="stylesheet" type="text/css" /><![endif]-->
+<!-- Stylesheets from static -->
+
+<!--[if gt IE 8]><!-->
+  <link href="/assets/local/application.css" media="screen" rel="stylesheet" type="text/css">
+  <link href="/assets/main.css" media="screen" rel="stylesheet" type="text/css">
+<!--<![endif]-->
+<!--[if IE 6]>
+  <link href="/assets/local/application-ie6.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="/assets/main-ie6.css" media="screen" rel="stylesheet" type="text/css">
+<![endif]-->
+<!--[if IE 7]>
+  <link href="/assets/local/application-ie7.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="/assets/main-ie7.css" media="screen" rel="stylesheet" type="text/css">
+<![endif]-->
+<!--[if IE 8]>
+  <link href="/assets/local/application-ie8.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="/assets/main-ie8.css" media="screen" rel="stylesheet" type="text/css">
+<![endif]-->
 <link href="/assets/local/print.css" media="print" rel="stylesheet" type="text/css">
+
 <!--[if IE 8]>
 <script type="text/javascript">
   (function(){if(window.opera){return;}
@@ -17,8 +32,6 @@
 <![endif]-->
 
 <!--[if gte IE 9]><!--><link href="/assets/local/fonts.css" media="all" rel="stylesheet" type="text/css"><!--<![endif]-->
-
-<link href="/assets/stylesheets/styles.css" media="screen" rel="stylesheet" type="text/css">
 
 <script src="/assets/local/jquery-1.7.2.js" type="text/javascript"></script>
 <!--[if lt IE 9]><script src="/assets/local/ie.js" type="text/javascript"></script><![endif]-->
