--- a/assets/stylesheets/views/phases.scss
+++ b/assets/stylesheets/views/phases.scss
@@ -1,6 +1,3 @@
----
----
-
 // ===================================================
 // PHASES PAGE
 //
@@ -8,6 +5,44 @@
 @import "colours";
 @import "design-patterns/regular-grid";
 
+
+.phase-diagram{
+  width: 100%;
+  margin: 0 -1em 0 -1em;
+}
+
+.phase-nav{
+  width:100%;
+  margin:0 -1em;
+  li{
+    display: block;
+    float: left;
+    width: 49%;
+    margin: 0; 
+    padding: 1em;
+    &.discovery{
+      background-color:$discovery-colour;
+    }
+    &.inception{
+      background-color:$inception-colour;
+    }
+    &.alpha{
+      background-color:$alpha-colour;
+    }
+    &.beta{
+      background-color:$beta-colour;
+    }
+    &.live{
+      background-color:$live-colour;
+    }
+    &.operational{
+      background-color:$operational-colour;
+    }
+    &.decommissioning{
+      background-color:$decommissioning-colour;
+    }
+  }
+}
 
 // CONTENT SLIDER
 
