--- a/_includes/_head.local.html
+++ b/_includes/_head.local.html
@@ -2,19 +2,19 @@
 
 <!--[if gt IE 8]><!-->
   <link href="/assets/local/application.css" media="screen" rel="stylesheet" type="text/css">
-  <link href="/assets/main.css" media="screen" rel="stylesheet" type="text/css">
+  <link href="/assets/stylesheets/main.css" media="screen" rel="stylesheet" type="text/css">
 <!--<![endif]-->
 <!--[if IE 6]>
   <link href="/assets/local/application-ie6.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="/assets/main-ie6.css" media="screen" rel="stylesheet" type="text/css">
+  <link href="/assets/stylesheets/main-ie6.css" media="screen" rel="stylesheet" type="text/css">
 <![endif]-->
 <!--[if IE 7]>
   <link href="/assets/local/application-ie7.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="/assets/main-ie7.css" media="screen" rel="stylesheet" type="text/css">
+  <link href="/assets/stylesheets/main-ie7.css" media="screen" rel="stylesheet" type="text/css">
 <![endif]-->
 <!--[if IE 8]>
   <link href="/assets/local/application-ie8.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="/assets/main-ie8.css" media="screen" rel="stylesheet" type="text/css">
+  <link href="/assets/stylesheets/main-ie8.css" media="screen" rel="stylesheet" type="text/css">
 <![endif]-->
 <link href="/assets/local/print.css" media="print" rel="stylesheet" type="text/css">
 
