Further asset organisation
Updated styles for guidance and role index views

--- a/_includes/_role-links.html
+++ b/_includes/_role-links.html
@@ -1,4 +1,4 @@
-<h3>Guides and resources for...</h3>
+<h3>Guides and resources for…</h3>
 <ul class="roles">
   <li><a href="/service-managers">Service managers</a></li>
   <li><a href="/designers">Designers</a></li>
