Add default layout css

--- a/assets/stylesheets/helpers/_contents.scss
+++ b/assets/stylesheets/helpers/_contents.scss
@@ -1,8 +1,7 @@
 #markdown-toc {
-  position: absolute;
-  left: 0;
-
   list-style: none;
+  padding: 0;
+  margin: 0 0 2em 0;
 
   li {
     padding: 0;
