Fix homepage layout and add wide layout css

--- a/_layouts/category-index.html
+++ b/_layouts/category-index.html
@@ -26,4 +26,5 @@ section_class: category-index
       <li><a href="https://github.com/alphagov/government-service-design-manual/commits/master{{ page.url | replace:'.html','.md' }}">Page history</a>
       <li><a href="https://github.com/alphagov/government-service-design-manual/edit/master{{ page.url | replace:'.html','.md' }}">Edit page on GitHub</a>
     </ul>
+  </div>
 </article>
