--- a/_layouts/gsdm-design-patterns.html
+++ b/_layouts/gsdm-design-patterns.html
@@ -29,11 +29,11 @@
             <div class="breadcrumb">
               <li>
                 <span class="divider">/</span>
-                <a href="http://gsdm.herokuapp.com/handbook/">Guides and toolkits</a>
+                <a href="/handbook/">Guides and toolkits</a>
               </li>
               <li>
                 <span class="divider">/</span>
-                <a href="http://gsdm.herokuapp.com/handbook/43/">Design patterns</a>
+                <a href="/handbook/43/">Design patterns</a>
               </li>
             </div>
         <hgroup><h1>{{ page.title }}</h1></hgroup></header><div class="article-container group">
