--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -18,7 +18,7 @@
   </div>
 
   <div class="footer-inside-government">
-    <h2><a href="/government">Inside Government</a></h2>
+    <h2><a href="https://www.gov.uk/government">Inside Government</a></h2>
 
     <ul>
       <li><a href="https://www.gov.uk/government/how-government-works">How government works</a></li>
