--- a/assets/stylesheets/layouts/gsdm.scss
+++ b/assets/stylesheets/layouts/gsdm.scss
@@ -9,3 +9,9 @@ html {
 #wrapper {
   background-color: transparent;
 }
+
+header.page-header {
+  hgroup {
+    background-color: transparent;
+  }
+}
