--- a/assets/stylesheets/helpers/_page-status.scss
+++ b/assets/stylesheets/helpers/_page-status.scss
@@ -1,7 +1,7 @@
 // Page status label
 .page-status {
-  position: relative;
-  float: right;
+  position: absolute;
+  right: 0;
   margin-right: 0;
   // padding: 0.2em 1.5em 0em 1.5em;
   padding: 11px 15px 10px;
