Get rid of GOV.UK header and links in footer

--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -1,5 +1,5 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<title>{{ page.title }}</title>
+<title>{{ page.title }} - Government Service Design Manual</title>
 
 {% include _head.local.html %}
 
