--- a/assets/stylesheets/helpers/_global-nav.scss
+++ b/assets/stylesheets/helpers/_global-nav.scss
@@ -48,6 +48,7 @@ $highlight-colour: $black;
     display: block;
     float: left;
     padding-left: 0;
+    color: $text-colour;
   }
   .jump-link {
     float: right;
