--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,50 +1,10 @@
-<footer class="group" id="footer" role="contentinfo"><div class="footer-wrapper">
-  <nav class="footer-categories"><div class="footer-explore">
-    <h2>Explore GOV.UK</h2>
-    <ul>
-      <li><a href="https://www.gov.uk/browse/driving">Driving, transport and travel</a></li>
-      <li><a href="https://www.gov.uk/browse/benefits">Benefits</a></li>
-      <li><a href="https://www.gov.uk/browse/business">Businesses and self-employed</a></li>
-      <li><a href="https://www.gov.uk/browse/employing-people">Employing people</a></li>
-      <li><a href="https://www.gov.uk/browse/education">Education and learning</a></li>
-      <li><a href="https://www.gov.uk/browse/working">Working, jobs and pensions</a></li>
-      <li><a href="https://www.gov.uk/browse/housing">Housing and local services</a></li>
-      <li><a href="https://www.gov.uk/browse/justice">Crime, justice and the law</a></li>
-      <li><a href="https://www.gov.uk/browse/tax">Money and tax</a></li>
-      <li><a href="https://www.gov.uk/browse/births-deaths-marriages">Births, deaths, marriages and care</a></li>
-      <li><a href="https://www.gov.uk/browse/disabilities">Disabled people</a></li>
-      <li><a href="https://www.gov.uk/browse/citizenship">Citizenship and life in the UK</a></li>
-    </ul>
+<footer class="group" id="footer" role="contentinfo">
+  <div class="footer-wrapper">
+
+    <p>All content is available under the <a href="http://www.nationalarchives.gov.uk/doc/open-government-licence/">Open Government Licence</a>, except where otherwise stated</p>
+
+    <div class="copyright">
+      <a href="http://www.nationalarchives.gov.uk/information-management/our-services/crown-copyright.htm">© Crown Copyright</a>
+    </div>
   </div>
-
-  <div class="footer-inside-government">
-    <h2><a href="https://www.gov.uk/government">Inside Government</a></h2>
-
-    <ul>
-      <li><a href="https://www.gov.uk/government/how-government-works">How government works</a></li>
-      <li><a href="https://www.gov.uk/government/organisations">Departments</a></li>
-      <li><a href="https://www.gov.uk/government/topics">Topics</a></li>
-      <li><a href="https://www.gov.uk/government/policies">Policies</a></li>
-      <li><a href="https://www.gov.uk/government/publications">Publications</a></li>
-      <li><a href="https://www.gov.uk/government/announcements">Announcements</a></li>
-    </ul>
-  </div>
-
-</nav><div class="footer-meta">
-<nav><ul>
-  <li><a href="https://www.gov.uk/support">Support</a></li>
-  <li><a href="https://www.gov.uk/support/cookies">Cookies</a></li>
-  <li><a href="https://www.gov.uk/feedback">Feedback</a></li>
-  <li><a href="https://www.gov.uk/cymraeg">Cymraeg</a></li>
-  <li>Built by the <a href="http://digital.cabinetoffice.gov.uk/">Government Digital Service</a>
-  </li>
-</ul>
-<p>All content is available under the <a href="http://www.nationalarchives.gov.uk/doc/open-government-licence/">Open Government Licence</a>, except where otherwise stated</p>
-</nav><div class="copyright">
-<a href="http://www.nationalarchives.gov.uk/information-management/our-services/crown-copyright.htm">© Crown Copyright</a>
-</div>
-</div>
-</div>
 </footer>
-
-<div>&nbsp;</div>
