Add role links helper css

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -24,6 +24,7 @@
 @import "helpers/_github-links.scss";
 @import "helpers/_global-nav.scss";
 @import "helpers/_page-status.scss";
+@import "helpers/_role-links.scss";
 @import "helpers/_tables.scss";
 @import "helpers/_tooltip.scss";
 
