--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -20,6 +20,7 @@
 
 // Helpers
 @import "helpers/_breadcrumbs.scss";
+@import "helpers/_caveat-notice.scss";
 @import "helpers/_contents.scss";
 @import "helpers/_github-links.scss";
 @import "helpers/_global-nav.scss";
