--- a/_includes/_head.local.html
+++ b/_includes/_head.local.html
@@ -46,3 +46,4 @@
 <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: --><link rel="apple-touch-icon-precomposed" href="/assets/local/apple-touch-icon-57x57.png">
 
 <script src="/assets/local/frontend.js" type="text/javascript"></script>
+<script src="/assets/javascript/caveat-notice.js" type="text/javascript"></script>
