--- a/_includes/_caveat-notice.html
+++ b/_includes/_caveat-notice.html
@@ -3,5 +3,5 @@
 
   <p>This is an experimental beta version of the manual, and it may contain inaccuracies or have gaps.</p>
 
-  <p>We will be working to improve the site before a full release in April. If you have any feedback please email <a href="mailto:dbd-team@digital.cabinet-office.gov.uk">dbd-team@digital.cabinet-office.gov.uk</a></p>
+  <p>We will be working to improve the site before a full release in April. If you have any feedback please email <a href="mailto:dbdss@digital.cabinet-office.gov.uk">dbdss@digital.cabinet-office.gov.uk</a></p>
 </div>
