--- a/_layouts/default-wrapper.html
+++ b/_layouts/default-wrapper.html
@@ -16,7 +16,7 @@
 
       <div class="js-toggle-nav" id="global-nav">
         <div class="inner">
-          <span class="home"><a href="/" {% if page.section == 'home' %}class="current"{% endif %}>Government Service Design Manual<small>alpha</small></a></span>
+          <span class="home"><a href="/" {% if page.section == 'home' %}class="current"{% endif %}>Government Service Design Manual<small class="beta">beta</small></a></span>
           <nav role="navigation" class="content">
             <ul id="navigation">
               <li><a href="/digital-by-default" {% if page.section == 'dbd' %}class="current"{% endif %}>Digital by Default Standard</a></li>
