--- a/_layouts/phases.html
+++ b/_layouts/phases.html
@@ -1,46 +1,27 @@
-<!DOCTYPE html>
-<!--[if lt IE 9]><html class="lte-ie8 " lang="en"><![endif]--><!--[if gt IE 8]><!--><html lang="en" class="">
-<!--<![endif]--><head>
-{% include _head.html %}
-    <link rel="stylesheet" href="/assets/stylesheets/styles.css" />
-  </head>
+---
+layout: default-wrapper
+section_class: wide phases
+---
+<article role="article" class="group">
+  <header class="page-header group">
+    <hgroup>
+      <h1>{{ page.title }}</h1>
+      {% if page.subtitle %}
+      <h2 class="subtitle">{{ page.subtitle }}</h2>
+      {% endif %}
+    </hgroup>
+  </header>
 
-  <body class="mainstream full-width">
-    <script type="text/javascript">document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script><a href="#content" class="visuallyhidden">Skip to main content</a>
+  <div class="article-container group">
+    <div class="inner">
+      {{ content }}
+    </div>
 
-    {% include _header.html %}
+    <ul class="github-links">
+      <li><a href="https://github.com/alphagov/government-service-design-manual/commits/master{{ page.url | replace:'.html','.md' }}">Page history</a>
+      <li><a href="https://github.com/alphagov/government-service-design-manual/edit/master{{ page.url | replace:'.html','.md' }}">Edit page on GitHub</a>
+    </ul>
+  </div>
+</article>
 
-    <div id="wrapper" class="{{ page.class }}{{ page.categories }}{% if page.section_class  %} {{ page.section_class }}{% endif %}">
 
-      <section id="content" role="main" class="group">
-
-        <div class="js-toggle-nav" id="global-nav">
-          <div class="inner">
-            <nav role="navigation" class="content">
-              <ul id="navigation">
-                <li><a href="/guides" {% if page.section == 'guidance' %}class="current"{% endif %}>Government Service Design Manual</a></li>
-                <li><a href="/digital-by-default" {% if page.section == 'dbd' %}class="current"{% endif %}>Digital by Default standard</a></li>
-              </ul>
-            </nav>
-          </div>
-        </div>
-
- 
-  
-
-        <hgroup><h1>{{ page.title }}</h1></hgroup></header><div class="article-container group">
-        <article role="article" class="group">
-          <div class="inner">
-              {% if page.subtitle %}
-                <p class="subtitle">{{ page.subtitle }}</p>
-              {% endif %}
-
-              {{ content }}
-            </div>
-            </article>
-          </div>
-      </section>
-    </div><!--end wrapper-->
-    {% include _footer.html %}
-  </body>
-</html>
