Page header styles

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -34,6 +34,7 @@
 @import "helpers/_contents.scss";
 @import "helpers/_github-links.scss";
 @import "helpers/_global-nav.scss";
+@import "helpers/_page-header.scss";
 @import "helpers/_page-status.scss";
 @import "helpers/_role-links.scss";
 @import "helpers/_tables.scss";
