--- a/assets/stylesheets/views/_home-page.scss
+++ b/assets/stylesheets/views/_home-page.scss
@@ -4,20 +4,11 @@
 
 .homepage {
   header.page-header {
+    border: none;
+    padding: 0;
+
     hgroup {
-      margin: 1em 2em 3em 2em;
       padding: 0;
-
-      h1 {
-        @include bold-48;
-        color: $text-colour;
-      }
-
-      h2.subtitle{
-        margin: 0;
-        color: $secondary-text-colour;
-        @include core-24;
-      }
     }    
   }
 
