Wide & Design Patterns layout & styles

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -52,6 +52,7 @@
 @import "views/_phases.scss";
 @import "views/_role-index.scss";
 @import "views/_standard.scss";
+@import "views/_wide.scss";
 
 @import "views/_accordion-form.scss";
 @import "views/_buttons.scss";
