Fix category index header styles

--- a/assets/stylesheets/views/_category-index.scss
+++ b/assets/stylesheets/views/_category-index.scss
@@ -2,7 +2,9 @@
   .page-header {
     width: 25%;
     float: left;
-    margin-top: 2em;
+    margin: 2em 0 0 0;
+    padding: 0;
+    border: none;
 
     hgroup {
       padding: 0 2em;
